# collective.taskqueue

./: .devcontainer.json  .devenv.flake.nix  .gitignore  .meta.toml  .travis.yml  CHANGELOG.rst  CHANGES.rst  CHANGES.txt  MANIFEST.in  Makefile  README.rst  base-redis.cfg  base.cfg  buildout.cfg  consumer.py  default.nix  devenv.nix  flake.nix  pyproject.toml  redis.cfg  requirements-buildout.nix  requirements-buildout.txt  requirements-plone52-python3.nix  requirements-plone52-python3.txt  requirements.txt  setup.cfg  setup.nix  setup.py  test-4.x.cfg  test-5.x.cfg  test-redis-4.x.cfg  test-redis-5.x.cfg  test_plone52.cfg  test_plone60.cfg  tox.ini  travis-redis.cfg  travis.cfg  zope.tac
.github/workflows/: meta.yml
src/collective/: __init__.py
src/collective/taskqueue/: __init__.py  component.xml  config.py  configure.zcml  datatypes.py  handlers.py  interfaces.py  redisqueue.py  server.py  taskqueue.py  testing.py  txredisapi.py
src/collective/taskqueue/demo/: configure.zcml
src/collective/taskqueue/pasplugin/: __init__.py  configure.zcml  taskauthplugin.py  taskauthplugin.zpt
src/collective/taskqueue/tests/: test_acceptance.py  test_acceptance.robot  test_acceptance.zcml  test_acceptance_views.py  test_queue.py  test_redisqueue.py  test_redisqueue.zcml  test_task_id.py  test_taskqueue.py  test_taskqueue.zcml
