[metadata]
name = collective.taskqueue
version = 0.8.3.dev0
description = Asynchronous task queue for Plone
long_description = file: README.rst, CONTRIBUTORS.rst, CHANGES.rst
keywords = Python Plone
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://github.com/datakurre/collective.taskqueue/
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 6.0
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    setuptools
    Products.CMFCore
    Products.CMFPlone
    Products.GenericSetup
    Products.PlonePAS
    Products.PluggableAuthService
    hiredis
    msgpack
    plone.memoize
    twisted
package_dir =
    = src
packages = find:
zip_safe = False
python_requires =
    >=3.7

[options.packages.find]
where =
    src

[options.extras_require]
test =
    plone.app.contenttypes
    plone.app.robotframework
    plone.app.testing
    plone.testing
    Products.CMFCore
    robotsuite
    unittest2
    z3c.form

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone